Changed Jakarta to Bali

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -5,7 +5,7 @@
       <div class="logo">PLAN<span>FUN</span></div>
 
       <div class="location">
-        <span class="city">Jakarta</span>
+        <span class="city">Bali</span>
         <span class="change">Change</span>
       </div>
     </div>
