More admin dashboard register function + add phone number & organization name

--- a/src/app/pages/register/register.html
+++ b/src/app/pages/register/register.html
@@ -34,6 +34,17 @@
       </div>
 
       <div class="form-group">
+        <label for="phone">Phone Number</label>
+        <input
+          id="phone"
+          type="tel"
+          placeholder="e.g., +62 812 3456 7890"
+          [(ngModel)]="phone"
+          name="phone"
+        />
+      </div>
+
+      <div class="form-group">
         <label for="password">Password</label>
         <input
           id="password"
