--- a/src/app/pages/my-tickets/my-tickets.html
+++ b/src/app/pages/my-tickets/my-tickets.html
@@ -9,25 +9,19 @@
   <div class="empty" *ngIf="!tickets.length">
     <div class="empty-icon">🎟️</div>
     <div class="empty-title">No tickets yet</div>
-    <p class="empty-text">
-      The tickets you have purchased will appear here.
-    </p>
-    <button class="empty-btn" (click)="goHome()">Find Movies</button>
+    <p class="empty-text">The tickets you have purchased will appear here.</p>
+    <button class="empty-btn" (click)="goHome()">Find Events</button>
   </div>
 
   <!-- LIST TIKET -->
   <div class="tickets-list" *ngIf="tickets.length">
-    <div
-      class="ticket-card"
-      *ngFor="let t of tickets; let i = index"
-      (click)="openTicket(i)"
-    >
+    <div class="ticket-card" *ngFor="let t of tickets; let i = index" (click)="openTicket(i)">
       <div class="poster-wrap">
-        <img [src]="t.poster" [alt]="t.movie" />
+        <img [src]="t.poster" [alt]="t.event" />
       </div>
 
       <div class="ticket-info">
-        <div class="movie-title">{{ t.movie }}</div>
+        <div class="event-title">{{ t.event }}</div>
 
         <div class="row">
           <span class="label">Tgl</span>
