--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -102,7 +102,7 @@
             />
           </div>
           <div class="form-group">
-            <label for="event-discount">Discount Value %</label>
+            <label for="event-discount">Discount Value % (Optional)</label>
             <div class="discount-row">
               <input
                 type="number"
